--- a/src/views/clinic-panel/pages/panel/contact.ejs
+++ b/src/views/clinic-panel/pages/panel/contact.ejs
@@ -3,8 +3,8 @@
     <div id="section-i" class="tm-p">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <div class="tm-section-title">İletişim Bilgileri</div>
-          <form class="tm-form-wide" action="/panel/contact" method="POST">
+          <div class="tm-section-title">İletİşİm Bİlgİlerİ</div>
+          <form class="tm-form-wide contact" action="/panel/contact" method="POST">
             <div class="form-group">
               <label for="phone">Merkezinizin Telefon Numarasını Giriniz</label>
               <input type="tel" class="form-control" id="phone" name="phone" value="<%- center.contactInformation.phone || ""  %>" placeholder="Telefon Numarası" />
