--- a/src/views/clinic-panel/pages/panel/analysis.ejs
+++ b/src/views/clinic-panel/pages/panel/analysis.ejs
@@ -2,10 +2,10 @@
   <div class="content-wrapper">
     <div id="section-i" class="tm-p">
       <div class="row">
-        <div class="tm-section-title">Analizler</div>
+        <div class="tm-section-title">Analİzler</div>
         <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
           <form class="tm-form-wide">
-            <div class="tm-section-title blue">Puanlarınız</div>
+            <div class="analysis-process-title blue mb-3 mt-5">Puanlarınız</div>
             <div class="tm-process">
               <div class="tm-process-bar-content">
                 <div>
@@ -18,12 +18,12 @@
                 <div class="tm-process-bar width-60 blue"></div>
                 <div class="tm-process-pers-av">Bölge Ort. %90</div>
                 <div class="tm-process-text tm-space-between small-text">
-                  <div>Merkez puanı %100 olan merkezlerin %30’luk bir oran ile daha fazla randevu aldığı gözlemlenmiştir.</div>
-                  <a href="#">Merkez puanı sayfasına git</a>
+                  <div class="admin-inner-text">Merkez puanı %100 olan merkezlerin %30’luk bir oran ile daha fazla randevu aldığı gözlemlenmiştir.</div>
+                  <a href="/panel/clinic-point">Merkez puanı sayfasına git</a>
                 </div>
               </div>
             </div>
-            <div class="tm-section-title blue tm-margin-t-2">Dialysing.com’da ki 12 Aylık Performansınız</div>
+            <div class="analysis-section-title blue tm-margin-t-2 analysis-process-title mb-3 mt-5">Dialysing.com’da ki 12 Aylık Performansınız</div>
             <div class="statistics-box">
               <div class="admin-single-box">
                 <div class="admin-single-title">Ortalama Aylık Hasta Sayısı</div>
@@ -46,7 +46,7 @@
                 <div class="average">Bölge Ort. %85</div>
               </div>
             </div>
-            <div class="tm-section-title blue tm-margin-t-2">Dialysing.com’daki Son 30 Günlük Arama Performansınız</div>
+            <div class="analysis-process-title blue tm-margin-t-2 mb-3 mt-5">Dialysing.com’daki Son 30 Günlük Arama Performansınız</div>
             <div class="statistics-box">
               <div class="admin-single-box">
                 <div class="admin-single-title">Arama Sonuçlarında Görüntülenme</div>
