modified competition design on rakip analizi

--- a/src/views/clinic-panel/pages/panel/competition.ejs
+++ b/src/views/clinic-panel/pages/panel/competition.ejs
@@ -2,7 +2,7 @@
   <div class="content-wrapper">
     <div id="section-i" class="tm-p">
       <div class="row">
-        <div class="tm-section-title">Rekabet Analizi</div>
+        <div class="tm-section-title">Rekabet Analİzİ</div>
         <div class="admin-inner-text">Tüm dünyadan dilediğiniz diyaliz merkezlerini ve rekabet karşılaştırması amacıyla ekleyebilirsiniz. Bu şekilde kendi hinterlandınızdaki diğer kliniklere göre performansınızı değerlendirebilirsiniz. Ayrıca dialysing.com’dan rekabet gücünüzü arttırmak için öneriler alabilirsiniz.</div>
         <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
           <form class="tm-form-wide competition">
@@ -13,7 +13,7 @@
               </div>
               <button type="button" class="add-clinic">+Ekle</button>
             </div>
-            <div class="tm-section-title blue">Rakipleriniz</div>
+            <div class="blue analysis-process-title">Rakipleriniz</div>
             <div class="form-box">
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
@@ -31,7 +31,7 @@
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
                 <div class="compare">
-                  <div class="name">Rakiplerinizin Ortalama Analizleri</div>
+                  <div class="analysis-process-title mb-1 mt-5">Rakiplerinizin Ortalama Analizleri</div>
                   <div class="statistics-box">
                     <div class="admin-single-box">
                       <div class="admin-single-title">Ortalama Aylık Hasta Sayısı</div>
@@ -52,7 +52,7 @@
                   </div>
                 </div>
                 <div class="compare">
-                  <div class="name">Türkmed Diyaliz Merkezi</div>
+                  <div class="name analysis-process-title mt-5 mb-1">Türkmed Diyaliz Merkezi</div>
                   <div class="statistics-box">
                     <div class="admin-single-box">
                       <div class="admin-single-title">Ortalama Aylık Hasta Sayısı</div>
