--- a/src/views/clinic-panel/pages/panel/competition.ejs
+++ b/src/views/clinic-panel/pages/panel/competition.ejs
@@ -6,14 +6,14 @@
         <div class="admin-inner-text">Tüm dünyadan dilediğiniz diyaliz merkezlerini ve rekabet karşılaştırması amacıyla ekleyebilirsiniz. Bu şekilde kendi hinterlandınızdaki diğer kliniklere göre performansınızı değerlendirebilirsiniz. Ayrıca dialysing.com’dan rekabet gücünüzü arttırmak için öneriler alabilirsiniz.</div>
         <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
           <form class="tm-form-wide competition">
-            <div class="warning">Lütfen merkezinizin performansı ile karşılaştırmak istediğiniz merkezleri seçiniz</div>
+            <div class="warning mb-2">Lütfen merkezinizin performansı ile karşılaştırmak istediğiniz merkezleri seçiniz</div>
             <div class="form-box add">
               <div class="form-group">
                 <input type="text" class="form-control" id="others" placeholder="Eklemek istediğiniz merkezi arayın" />
               </div>
               <button type="button" class="add-clinic">+Ekle</button>
             </div>
-            <div class="blue analysis-process-title">Rakipleriniz</div>
+            <div class="blue analysis-process-title mt-3">Rakipleriniz</div>
             <div class="form-box">
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
@@ -52,7 +52,7 @@
                   </div>
                 </div>
                 <div class="compare">
-                  <div class="name analysis-process-title mt-5 mb-1">Türkmed Diyaliz Merkezi</div>
+                  <div class="analysis-process-title mt-5 mb-1">Türkmed Diyaliz Merkezi</div>
                   <div class="statistics-box">
                     <div class="admin-single-box">
                       <div class="admin-single-title">Ortalama Aylık Hasta Sayısı</div>
