changing design login on clinic

--- a/src/views/clinic-panel/pages/clinic-login.ejs
+++ b/src/views/clinic-panel/pages/clinic-login.ejs
@@ -22,7 +22,7 @@
                             <div class="form-group password">
                               <label for="login-password">Şifrenizi Giriniz</label>
                               <input type="password" class="form-control" id="password" name="password" placeholder="Şifreniz">
-                              <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+                              <img src="../user/img/clinic/svg/show-password.svg" class="mt-1" alt="Icon Arrow" />
                             </div>
                             <button type="submit" class="btn btn-second">Giriş Yap</button>
                             <div class="link">Üyeliğiniz Yok Mu?<a href="/panel/register"> Kayıt Ol</a></div>
