--- a/src/views/clinic-panel/partials/navbar.ejs
+++ b/src/views/clinic-panel/partials/navbar.ejs
@@ -81,13 +81,13 @@
               <img src="../user/img/icons/question.png" alt="Icons Question" />
             </li>
             <li class="nav-item buttons mt-2 mt-2">
-              <a href="./addCenterMainPage.html" class="nav-link btn-third">Merkezinizi Ekleyin</a>
+              <a href="/panel" class="nav-link btn-third">Merkezinizi Ekleyin</a>
             </li>
             <li class="nav-item buttons mt-2 mt-2">
-              <a href="../register/register.html" class="nav-link btn-second">Kayıt Ol</a>
+              <a href="/register" class="nav-link btn-second">Kayıt Ol</a>
             </li>
             <li class="nav-item buttons mt-2 mt-2">
-              <a href="./clinic-login.html" class="nav-link btn-second">Giriş Yap</a>
+              <a href="/panel/login" class="nav-link btn-second">Giriş Yap</a>
             </li>
           </ul>
         </div>
