--- a/public/user/css/clinic/style.css
+++ b/public/user/css/clinic/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Khula&family=Lato&family=Montserrat&family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Khula&family=Lato&family=Montserrat&family=Roboto&display=swap");
 body {
-  font-family: 'Gilroy', sans-serif;
+  font-family: "Gilroy", sans-serif;
   font-size: 13px;
   font-weight: 400;
   overflow-x: hidden;
@@ -20,7 +20,7 @@ button {
 }
 /* location */
 .select .form-control {
-  border: #28353e5e solid .5px !important;
+  border: #28353e5e solid 0.5px !important;
   border-radius: 10px;
   color: rgba(0, 0, 0, 0.644) !important;
 }
@@ -195,16 +195,16 @@ input:checked + .tm-slider:before {
   display: flex;
   justify-content: center;
   align-items: center;
-} 
+}
 /*section i*/
-.center-address { 
-  font-family: 'Montserrat', sans-serif;
+.center-address {
+  font-family: "Montserrat", sans-serif;
 }
 .center-address i {
-  color: #19a2f2; 
+  color: #19a2f2;
 }
 .center-call p {
-  color: #28353E;
+  color: #28353e;
   font-weight: bolder;
 }
 .tm-flex-align-center {
@@ -272,10 +272,10 @@ input:checked + .tm-slider:before {
 }
 .tm-margin-r-0 {
   margin-right: 0;
-} 
+}
 .tm-p-0 {
   padding: 0;
-} 
+}
 .tm-p-3 {
   padding: 2.5rem 0;
 }
@@ -296,7 +296,7 @@ input:checked + .tm-slider:before {
 }
 .tm-pt-5 {
   padding-top: 2.5px;
-} 
+}
 .tm-pb-2 {
   padding-bottom: 1rem !important;
 }
@@ -324,58 +324,58 @@ input:checked + .tm-slider:before {
 }
 .tm-color-dark {
   color: #28353e;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 15px;
 }
-.employe { 
-  font-family: 'Montserrat', sans-serif;
+.employe {
+  font-family: "Montserrat", sans-serif;
   font-size: 13px;
 }
-.employe span{ 
-  font-family: 'Montserrat', sans-serif;
+.employe span {
+  font-family: "Montserrat", sans-serif;
   font-size: 13px;
 }
 .type {
   font-size: 18px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .tm-color-shadow {
-  color: #28353e88; 
+  color: #28353e88;
 }
 .tm-color-shadow-2 {
   color: #28353e5e;
   margin-bottom: 10px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .tm-color-shadow-3 {
-  color: #28353e8c; 
+  color: #28353e8c;
 }
 .tm-color-pale {
   color: #999999;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   line-height: 1.5rem;
   font-size: 15px;
 }
-.tm-section-title span { 
-  font-size: 13px; 
-  font-family: 'Lato', sans-serif;
+.tm-section-title span {
+  font-size: 13px;
+  font-family: "Lato", sans-serif;
 }
-.tm-section-title span i{
-color: #FFCC16;
+.tm-section-title span i {
+  color: #ffcc16;
 }
-.title{
+.title {
   font-size: 12px;
 }
 .covid {
-  font-family: 'Khula', sans-serif;
+  font-family: "Khula", sans-serif;
   font-size: 13px;
-  color: #28353E;
+  color: #28353e;
   line-height: 1.3rem;
 }
 .covid a {
-  font-family: 'Khula', sans-serif;
+  font-family: "Khula", sans-serif;
   text-decoration: none;
-  color: #055F8F;
+  color: #055f8f;
   font-size: 13px;
   font-weight: 600;
 }
@@ -513,7 +513,7 @@ p {
 .nav-item a.btn-second,
 .nav-item a.btn-third {
   color: #ffffff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .tm-top-bar {
@@ -758,7 +758,7 @@ p {
   background-color: #19a2f2;
   border-color: #19a2f2;
   border-radius: 8px;
-  cursor: pointer; 
+  cursor: pointer;
   padding: 0.5rem 1rem;
   text-align: center;
   font-weight: 600;
@@ -776,10 +776,10 @@ p {
   padding: 0.5rem 1rem;
   text-align: center;
   border: 2px solid #055f8f;
-  font-size: 12px !important; 
-  font-family: 'Montserrat', sans-serif;
+  font-size: 12px !important;
+  font-family: "Montserrat", sans-serif;
   text-decoration: none;
-} 
+}
 .btn-second.wide {
   width: 100%;
 }
@@ -800,7 +800,7 @@ p {
 .btn-second.twitter {
   background-color: #4da8e7;
   border-color: #4da8e7;
-} 
+}
 .btn-second.facebook {
   background-color: #4a66ad;
   border-color: #4a66ad;
@@ -813,8 +813,8 @@ p {
   color: #ffffff;
   font-weight: 500;
   padding: 0.5rem 1rem;
-  text-align: center; 
-  font-size: 12px !important; 
+  text-align: center;
+  font-size: 12px !important;
 }
 .btn-forth {
   background-color: transparent;
@@ -827,7 +827,7 @@ p {
   text-align: center;
   font-weight: 600;
   font-size: 12px !important;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .btn-forth-active {
   background-color: #055f8f;
@@ -840,12 +840,12 @@ p {
   text-align: center;
   font-weight: 600;
   font-size: 12px !important;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .select select {
-  border: rgba(0, 0, 0, 0.205) solid .5px !important;
-  font-size: 14px; 
-}  
+  border: rgba(0, 0, 0, 0.205) solid 0.5px !important;
+  font-size: 14px;
+}
 .btn-dropdown {
   width: 100%;
   display: block;
@@ -875,23 +875,23 @@ p {
   width: 100%;
 }
 .dropdown-menu {
-  color: #28353E !important;
-  font-family: 'Montserrat', sans-serif;
+  color: #28353e !important;
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
 }
 .dropdown-menu a span {
-  color: #28353E !important;
-  font-family: 'Montserrat', sans-serif;
+  color: #28353e !important;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
   font-weight: 500;
 }
 .dropdown-menu a span:hover {
-  color: #28353E !important;
-  font-family: 'Montserrat', sans-serif;
+  color: #28353e !important;
+  font-family: "Montserrat", sans-serif;
   font-size: 14px;
 }
-.dropdown-menu li{
-margin-bottom: 10px;
+.dropdown-menu li {
+  margin-bottom: 10px;
 }
 .btn-dropdown.faq {
   font-weight: 600;
@@ -924,7 +924,7 @@ margin-bottom: 10px;
   font-size: 28px;
   font-weight: 600;
   padding: 0.5rem 0;
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
 }
 
 .tm-header-title.blue {
@@ -945,7 +945,7 @@ margin-bottom: 10px;
 .tm-form-element {
   position: relative;
   font-size: 12px !important;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .tm-form-element:last-child {
   margin-right: 0;
@@ -1000,75 +1000,75 @@ select:not([multiple]) {
   background-image: url("../img/icons/select.png");
   padding: 0.5em;
   padding-right: 1.5em;
-} 
+}
 select.tm-select::-ms-expand {
   display: none;
-} 
+}
 select {
   background-color: transparent;
   border: none;
   color: #ffffff;
-} 
+}
 select option {
   color: rgba(0, 0, 0, 0.8);
-  font-size: 13px;  
-} 
-select#job-dropdown.btn.btn-dropdown.dropdown-toggle { 
+  font-size: 13px;
+}
+select#job-dropdown.btn.btn-dropdown.dropdown-toggle {
   font-size: 14px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #28353e7e;
   padding: 10px;
 }
 input#check-in.form-control {
   font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #28353e7e;
 }
 input#password.form-control {
   font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #28353e7e;
 }
-input#check-in.form-control::before{ 
-color: #28353e; 
-margin-right: 10px;
+input#check-in.form-control::before {
+  color: #28353e;
+  margin-right: 10px;
 }
 input#check-out.form-control {
   font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #28353e7e;
-} 
+}
 input#companyName.form-control {
   font-size: 14px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #28353e7e;
-} 
-input#check-out.form-control::before{ 
-  color: #28353e; 
+}
+input#check-out.form-control::before {
+  color: #28353e;
   margin-right: 10px;
 }
 select.form-control {
   color: #ffffff;
   font-size: unset;
-} 
+}
 .tm-select {
   border-radius: 0;
   color: #ffffff;
-} 
+}
 .tm-search-form .form-control {
   font-size: 0.8rem;
   padding: 0.75rem 0.75rem 0.75rem 60px;
-} 
+}
 .tm-search-form .tm-form-element {
   width: 33.3333%;
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
 .tm-search-form .tm-form-element-2 {
   width: 25%;
 }
-.search { 
+.search {
   background-color: #fff;
   border-radius: 0px 20px 20px 0px;
 }
@@ -1131,15 +1131,15 @@ select.form-control {
 .tm-section-title {
   color: #28353e;
   font-size: 24px;
-  font-weight: 700;    
-  font-family: 'Khula', sans-serif;
+  font-weight: 700;
+  font-family: "Khula", sans-serif;
 }
 
 .tm-section-title-2 {
   font-size: 35px;
   font-weight: bold;
-  font-family: 'Gilroy', sans-serif; 
-  color: #28353E;
+  font-family: "Gilroy", sans-serif;
+  color: #28353e;
 }
 
 .tm-section-subtitle {
@@ -1154,16 +1154,24 @@ select.form-control {
 }
 
 .tm-text {
-  font-size: 16px;
+  font-size: 17px;
   margin-bottom: 1.5rem;
-  line-height: 30px;
-  font-family: 'Montserrat', sans-serif;
+  line-height: 2.5rem;
+  font-family: "Montserrat", sans-serif;
 }
-
+.tm-text span {
+  color: #025c90;
+  font-weight: 700;
+}
+.tm-text span .com {
+  color: #19a2f2;
+  font-weight: 700;
+}
 .tm-text-white {
   font-size: 16px;
   color: #ffffff;
-  font-family: 'Lato', sans-serif;
+  font-family: "Montserrat", sans-serif;
+  line-height: 2rem;
 }
 
 .tm-text-white.subscribe {
@@ -1510,63 +1518,63 @@ select.form-control {
 .quote-content .inner-content {
   padding-left: 6rem;
   padding-top: 3.5rem;
-} 
+}
 .quote-content .quote-icon-top,
 .quote-content .quote-icon-bottom {
   position: absolute;
-} 
+}
 .quote-content .quote-icon-bottom {
   right: 0;
   bottom: 60px;
-} 
+}
 .quote-content .text {
   color: #19a2f2;
   padding: 1rem 0;
   font-size: 18px;
   width: 85%;
-} 
+}
 .customer-count {
   padding-bottom: 1rem;
   font-weight: 600;
-} 
+}
 .profiles {
   position: absolute;
   bottom: -20px;
   padding-left: 6rem;
-} 
+}
 .profiles img {
   width: 60px;
   height: 60px;
-} 
+}
 .profiles .profile3 {
   left: -15px;
   position: relative;
-} 
+}
 .profiles .profile4 {
   left: -30px;
   position: relative;
-} 
+}
 .profiles .profile5 {
   left: -45px;
   position: relative;
-} 
+}
 .profiles .profile6 {
   left: -60px;
   position: relative;
-} 
+}
 .profiles .profile7 {
   left: -75px;
   position: relative;
-} 
+}
 .profiles .profile8 {
   left: -90px;
   position: relative;
-} 
-.puan { 
+}
+.puan {
   border-radius: 50% !important;
 }
-textarea#message.form-control { 
-  font-family: 'Montserrat', sans-serif;
+textarea#message.form-control {
+  font-family: "Montserrat", sans-serif;
   font-size: 12px;
 }
 .alert-primary {
@@ -1576,85 +1584,85 @@ textarea#message.form-control {
 input#name-surname.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#email.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 select#job.btn.btn-dropdown.dropdown.btn-dropdown.dropdown-toggle {
   font-size: 12px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#nameSurname.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
-} 
+  font-family: "Montserrat", sans-serif;
+}
 input#phone.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#email-confirm.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#birthdate.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#email-confirm.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#exampleRadio1.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif; 
+  font-family: "Montserrat", sans-serif;
 }
-label.form-check-label.mx-0 { 
+label.form-check-label.mx-0 {
   margin-right: 0;
 }
 input#name-surname2.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#situation.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#address.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#district.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#street.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#postcode.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 input#tel.form-control {
   font-size: 14px;
   padding: 15px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 /*input*/
 input#check-in.form-control {
@@ -1714,7 +1722,7 @@ input#center-name.form-control {
 /*kişiselbilgiler*/
 .clinic-form-text {
   color: rgba(0, 0, 0, 0.5);
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .circle {
   background-color: #e9f7ff;
@@ -1729,34 +1737,34 @@ input#center-name.form-control {
   display: flex;
   flex-direction: column;
   justify-content: center;
-} 
+}
 .circle-content .clinic-number {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 17px;
   line-height: 30px;
-  font-family: 'Lato', sans-serif;
-} 
+  font-family: "Lato", sans-serif;
+}
 .circle-content .clinic-prop {
   font-weight: 400;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 24px;
-  opacity: 0.5;
-  font-family: 'Lato', sans-serif;
-} 
+  opacity: 0.7;
+  font-family: "Lato", sans-serif;
+}
 .alert-danger {
-  color: #C61232; 
-  font-family: 'Lato', sans-serif;
+  color: #c61232;
+  font-family: "Lato", sans-serif;
   font-size: 12px;
 }
 .alert-danger svg {
-  color: #C61232; 
+  color: #c61232;
 }
 .tm-form {
   width: 500px;
   border-radius: 16px;
   background-color: #ffffff;
   padding: 2rem;
-} 
+}
 .tm-form-wide {
   border-radius: 16px;
   background-color: #ffffff;
@@ -1769,7 +1777,7 @@ input#center-name.form-control {
   font-size: 15px;
   margin-bottom: 2px;
   font-weight: 600;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .tm-form-small {
   border-radius: 16px;
@@ -1779,7 +1787,7 @@ input#center-name.form-control {
 .tm-form .form-title,
 .tm-form-wide .form-title {
   color: #28353e;
-  font-size: 24px; 
+  font-size: 24px;
   line-height: 50px;
   margin-bottom: 2rem;
 }
@@ -1787,7 +1795,7 @@ input#center-name.form-control {
 .tm-form label,
 .tm-form-wide label,
 .tm-form-small label {
-  color: #055f8f; 
+  color: #055f8f;
 }
 
 .tm-form-small label {
@@ -1839,7 +1847,7 @@ input#center-name.form-control {
 
 .tm-form .link a,
 .tm-form-wide .link a {
-  color: #055f8f; 
+  color: #055f8f;
 }
 
 .tm-form-wide .tm-text-info {
@@ -1931,43 +1939,43 @@ input#center-name.form-control {
   color: #28353e;
 
   opacity: 0.4;
-} 
+}
 .tm-button-next a {
   text-decoration: none;
 }
 .language {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 13px;
   line-height: 1.4rem;
   color: #28353ea9;
 }
 .clinic-questions-title {
-  color: #28353E;
-  font-family: 'Lato', sans-serif;
-  font-size: 15px; 
+  color: #28353e;
+  font-family: "Lato", sans-serif;
+  font-size: 15px;
   line-height: 1.5rem;
 }
 .clinic-questions-text {
-  font-family: 'Montserrat', sans-serif; 
+  font-family: "Montserrat", sans-serif;
 }
 .clinic-title {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .clinic-center-km {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .clinic-center-name {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .card {
   border: none;
   border-radius: 15px;
 }
 .tm-box-title {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .tm-box-text {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 .page-link {
   background-color: transparent;
@@ -1977,9 +1985,9 @@ input#center-name.form-control {
   font-weight: 700;
 }
 .tm-profile-comment {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 15px;
-  color: #28353E;
+  color: #28353e;
 }
 .page-item.active .page-link {
   background-color: #055f8f;
@@ -1998,7 +2006,7 @@ input#center-name.form-control {
   color: #28353e;
   font-weight: 600;
   font-size: 13px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .tm-process-bar {
   width: 100%;
@@ -2044,7 +2052,7 @@ input#center-name.form-control {
   width: 10%;
   font-size: 13px;
   text-align: right;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 footer a {
@@ -2093,7 +2101,7 @@ footer a {
   .navbar .logo {
     font-size: 20px;
     margin-right: 0;
-    font-family: 'Gilroy', sans-serif; 
+    font-family: "Gilroy", sans-serif;
   }
 
   .navbar a {
@@ -2527,7 +2535,7 @@ footer a {
   padding: 1rem 0;
   display: block;
   text-decoration: none;
-  color: #28353E;
+  color: #28353e;
   display: flex;
   align-items: center;
   height: 100%;
@@ -2551,37 +2559,37 @@ footer a {
   display: block;
 }
 .text-date {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 11px;
   color: rgba(0, 0, 0, 0.329);
 }
 .title {
-  color: #055F8F;
+  color: #055f8f;
   font-weight: bold;
-  font-family: 'Gilroy', sans-serif; 
+  font-family: "Gilroy", sans-serif;
   font-size: 22px;
 }
 .text {
   font-size: 12px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 11px;
   color: rgba(0, 0, 0, 0.329);
 }
 .span-text1 {
   color: #19a2f2;
   font-size: 12px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: bold;
 }
 .attention {
   font-size: 12px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 .users {
   font-size: 12px;
-  font-family: 'Lato', sans-serif;  
-}  
-.logo { 
+  font-family: "Lato", sans-serif;
+}
+.logo {
   font-size: 25px !important;
   font-weight: 600 !important;
 }
@@ -2589,8 +2597,8 @@ footer a {
   font-size: 11px !important;
 }
 .language-selection select {
-  font-family: 'Gilroy', sans-serif !important;  
-  font-size: 12px !important; 
+  font-family: "Gilroy", sans-serif !important;
+  font-size: 12px !important;
 }
 input#password.form-control {
   padding: 15px !important;
