--- a/src/views/admin/pages/confirm-clinic.ejs
+++ b/src/views/admin/pages/confirm-clinic.ejs
@@ -64,7 +64,7 @@
                       </td>
                       <td class="align-middle">
                         <div class="btn-group align-top">
-                          <a class="btn btn-sm btn-white btn-svg" href="/admin/confirm-clinic/<%- center._id  %>" ><%= i18n.__("3") %> </a>
+                          <a class="btn btn-sm btn-white btn-svg" href="/admin/confirm-clinic/<%- center._id  %>" ><%= __("3") %> </a>
                         </div>
                       </td>
                     </tr>
