--- a/src/views/clinic-panel/layouts/panel.ejs
+++ b/src/views/clinic-panel/layouts/panel.ejs
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="../user/css/style.css" />
   <link rel="stylesheet" href="../user/css/clinic/index.css" />
   <link rel="stylesheet" href="../user/css/panel.css">
+  <link rel="stylesheet" href="../user/css/cleander.css">
   <!-- Bootstrap 5.0-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
@@ -56,8 +57,9 @@
   <!-- page-body-wrapper ends -->
   </div>
   <!-- container-scroller -->
+  <!-- Cleander -->
+  <script src="../user/js/cleander.js"></script>
   <!-- Bootstrap 5 -->
-
   <script src="../user/js/location.js"></script>
   <!-- load JS files -->
   <script src="../user/js/jquery-1.11.3.min.js"></script>
