--- a/src/views/user/pages/clinic/single-clinic.ejs
+++ b/src/views/user/pages/clinic/single-clinic.ejs
@@ -268,7 +268,7 @@
                             <div class="form-group clinic-check-dates">
                                 <div class="checkin">
                                     <label for="check-in">Check-in Tarihi</label>
-                                    <input type="date" placeholder="Check-in Tarihi"  id="checkInDate" name="checkInDate"  aria-describedby="emailHelp" class="form-control bi bi-chevron-down">
+                                    <input type="date" placeholder="Check-in Tarihi"  id="checkInDate" name="checkInDate" value="<%- date != null ? date : null  %>"  aria-describedby="emailHelp" class="form-control bi bi-chevron-down">
                                 </div>
                                 <div class="checkout">
                                     <label for="check-out">Check-out Tarihi</label>
