adding date on görünürlüğünüzü arttırın in admin

--- a/public/user/css/panel.css
+++ b/public/user/css/panel.css
@@ -377,3 +377,37 @@ input#explanation1.form-control {
   font-weight: 700;
   font-size: 20px;
 }
+.visibilty {
+  color: #025c90;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+}
+select#day {
+  color: #28353e;
+  font-family: "Montserrat", sans-serif;
+  border: 1.5px solid #28353e18;
+  border-radius: 6px;
+  margin-right: 5px;
+  font-size: 12px;
+}
+select#month {
+  color: #28353e;
+  font-family: "Montserrat", sans-serif;
+  border: 1.5px solid #28353e18;
+  border-radius: 6px;
+  margin-right: 5px;
+  font-size: 12px;
+}
+select#year {
+  color: #28353e;
+  font-family: "Montserrat", sans-serif;
+  border: 1.5px solid #28353e18;
+  border-radius: 6px;
+  margin-right: 5px;
+  font-size: 12px;
+}
+span label { 
+  color: #28353e;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+}
