--- a/src/views/clinic-panel/layouts/panel.ejs
+++ b/src/views/clinic-panel/layouts/panel.ejs
@@ -57,6 +57,8 @@
   <!-- page-body-wrapper ends -->
   </div>
   <!-- container-scroller -->
+  <!-- Selected Date Drapdown -->
+  <script src="../clinic-panel/js/selected-date-drapdown.js"></script>
   <!-- Cleander -->
   <script src="../user/js/cleander.js"></script>
   <!-- Bootstrap 5 -->
