--- a/src/views/clinic-panel/pages/panel/index.ejs
+++ b/src/views/clinic-panel/pages/panel/index.ejs
@@ -1,4 +1,3 @@
-
 <div class="main-panel">
 
   <div class="content-wrapper">
@@ -31,24 +30,24 @@
           </div>
           <div class="sub-image row align-items-start mb-4 px-2">
             <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image"
-                alt="<%- center.companyInformation.companyName  %>" />
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%"
+                class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
             </div>
             <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image"
-                alt="<%- center.companyInformation.companyName  %>" />
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%"
+                class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
             </div>
             <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image"
-                alt="<%- center.companyInformation.companyName  %>" />
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%"
+                class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
             </div>
             <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image"
-                alt="<%- center.companyInformation.companyName  %>" />
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%"
+                class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
             </div>
             <div class="col">
-              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%" class="mb-2 clinic-image"
-                alt="<%- center.companyInformation.companyName  %>" />
+              <img src="<%- center.companyInformation.photo[0]  %> " width="100%" height="100%"
+                class="mb-2 clinic-image" alt="<%- center.companyInformation.companyName  %>" />
             </div>
           </div>
           <div class="tm-section-title tm-margin-t-2">Gelecek Rezervasyonlarınız</div>
@@ -153,7 +152,7 @@
               </div>
             </div>
           </div>
-          <div class="tm-section-title tm-margin-t-1-5">Merkezinizin Performansı</div>
+          <div class="tm-section-title tm-margin-t-1-5 mt-5">Merkezinizin Performansı</div>
           <div class="admin-box custom">
             <div class="admin-single-box">
               <div class="admin-single-title mx-1">Ortalama Aylık Hasta Sayısı</div>
@@ -176,15 +175,37 @@
               <div class="average mx-1">Bölge Ort. %85</div>
             </div>
           </div>
-          <div class="tm-section-title tm-margin-t-1-5">Görünürlüğünüzü Arttırın</div>
+          <div class="tm-section-title tm-margin-t-1-5 mt-5">Görünürlüğünüzü Arttırın</div>
           <div class="admin-text">Merkezinizin görünürlüğünü çeşitli seçenekler ile arttırmanız mümkün. Merkezinize 30
             KM uzaklıkta olan diğer merkezlerin görüntülenme oranları sizden %30 daha fazla durumdadır.</div>
+          <form>
+            <div class="visibilty mb-2">Görünürlük Tarihi</div>
+            <span>
+              <label for="day">Day:</label>
+              <select name="day" id="day"></select>
+            </span>
+            <span>
+              <label for="month">Month:</label>
+              <select name="month" id="month"></select>
+            </span>
+            <span>
+              <label for="year">Year:</label>
+              <select name="year" id="year">Year:</select>
+            </span>
+          </form>
+
         </div>
       </div>
     </div>
 
+
+
+
+
+
   </div>
   <!-- content-wrapper ends -->
+
   <div id="suggestion">
     <div class="container">
       <div class="row">
@@ -198,6 +219,7 @@
     </div>
   </div>
   <!-- partial:partials/_footer.html -->
+
 
   <%- include("../../partials/footer") %>
 
