--- a/src/views/clinic-panel/partials/panel-navbar.ejs
+++ b/src/views/clinic-panel/partials/panel-navbar.ejs
@@ -6,27 +6,29 @@
       </button>
     </div>
     <div>
-        <a class="navbar-brand brand-logo" href="/">Dialysing<span>.com</span> </a>
-        <!-- <a class="navbar-brand brand-logo-mini" href="../index.html">D</span></a> -->
+      <a class="navbar-brand brand-logo" href="/">Dialysing<span>.com</span> </a>
+      <!-- <a class="navbar-brand brand-logo-mini" href="../index.html">D</span></a> -->
     </div>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-top">
     <ul class="navbar-nav">
       <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
         <div class="tm-form-element tm-form-element-2">
-          <select name="dialysisCenter" class="form-control tm-select" id="dialysisCenter"  onchange="changeCenter()">
-            <% user.centerList.forEach(center => { %>
-              <option value="<%- center._id  %> "><%- center.companyInformation.companyName  %> </option>
-            <% }) %>
+          <select name="dialysisCenter" class="form-control tm-select" id="dialysisCenter" onchange="changeCenter()">
+            <% user.centerList.forEach(center=> { %>
+              <option value="<%- center._id  %> ">
+                <%- center.companyInformation.companyName %>
+              </option>
+              <% }) %>
           </select>
         </div>
       </li>
     </ul>
     <ul class="navbar-nav ms-auto">
       <li>
-        <%- user.priceCount  %> 
+        <%- user.priceCount %>
       </li>
-      <li class="nav-item language">
+      <li class="nav-item language mr-4">
         <img src="../user/img/flags/turkey.png" alt="Flags Turkey" />
         <div class="tm-form-element tm-form-element-2">
           <select name="language" class="form-control tm-select" id="language">
@@ -36,7 +38,7 @@
           </select>
         </div>
       </li>
-
+      <!-- 
       <li class="nav-item dropdown question">
         <a class="nav-link count-indicator" id="notificationDropdown" href="#" data-bs-toggle="dropdown">
           <img src="../user/img/icons/question.png" alt="Question Icon" />
@@ -74,19 +76,26 @@
             </div>
           </a>
         </div>
-      </li>
+      </li> -->
 
       <% if (!user) { %>
         <li class="nav-item buttons">
           <a href="/panel/choose-personel" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
         </li>
-      <% } %>
+        <% } %>
 
-      <li class="nav-item ms-auto name"><%- user.nameSurname  %> </li>
-      <li class="nav-item ms-auto"><a href="/panel/logout">Çıkış Yap</a></li>
-      <li class="nav-item dropdown d-none d-lg-block user-dropdown">
-        <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false"> <img class="img-xs rounded-circle" src="../clinic-panel/images/profiles/Profile1.png" alt="Profile image" /> </a>
-        <!-- <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
+          <li class="nav-item ms-auto name mx-3">
+            <%- user.nameSurname %>
+          </li>
+          <li class="nav-item ms-auto logout"><a href="/panel/logout">Çıkış Yap</a></li>
+          <li class="nav-item dropdown d-none d-lg-block user-dropdown mx-1">
+            <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+              <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+              </svg>
+            </a>
+            <!-- <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
           <div class="dropdown-header text-center">
             <img class="img-md rounded-circle" src="../clinic-panel/images/profiles/Profile1.png" alt="Profile image" />
             <p class="mb-1 mt-3 font-weight-semibold">Allen Moreno</p>
@@ -98,9 +107,10 @@
           <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-help-circle-outline text-primary me-2"></i> FAQ</a>
           <a class="dropdown-item"><i class="dropdown-item-icon mdi mdi-power text-primary me-2"></i>Sign Out</a>
         </div> -->
-      </li>
+          </li>
     </ul>
-    <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas">
+    <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center mt-4" type="button"
+      data-bs-toggle="offcanvas">
       <span class="mdi mdi-menu"></span>
     </button>
   </div>
@@ -108,7 +118,7 @@
 
 
 <script>
-  function changeCenter(){
-    window.location.replace("/panel?clinic="+document.getElementById("dialysisCenter").value);  
+  function changeCenter() {
+    window.location.replace("/panel?clinic=" + document.getElementById("dialysisCenter").value);
   }
 </script>
