editing admin panel

--- a/src/views/admin/pages/blogs.ejs
+++ b/src/views/admin/pages/blogs.ejs
@@ -1,7 +1,7 @@
 <!--Page header-->
 <div class="page-header">
   <div class="page-leftheader">
-    <h4 class="page-title">Blog Yazısı Sil</h4>
+    <h4 class="page-title">Tüm Blog Yazıları</h4>
   </div>
 </div>
 <!--End Page header-->
@@ -26,6 +26,7 @@
             ></a>
             <div class="dropdown-menu tx-13 dropdown-menu-right">
               <a class="dropdown-item" href="/admin/delete-blog?id=<%- blog._id %>">Sil</a>
+              <a class="dropdown-item" href="/admin/update-blog?id=<%- blog._id %>">Güncelle</a>
             </div>
           </div>
         </div>
